Added input & solution for day6

--- a/adventofcode2020.ipynb
+++ b/adventofcode2020.ipynb
@@ -1356,14 +1356,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "717\n"
+      "The only seat left is  717\n"
      ]
     }
    ],
@@ -1371,8 +1371,111 @@
     "sorted_ID = np.sort(data['seatID'])\n",
     "for ind in range(1,len(sorted_ID)-1):\n",
     "    if not(sorted_ID[ind]-1 == sorted_ID[ind-1]):\n",
-    "        print('The seat wit',sorted_ID[ind]-1)\n",
+    "        print('The only seat left is ',sorted_ID[ind]-1)\n",
     "                    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Day 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 288,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file_path = root_dir+'inputs/input_6.txt'\n",
+    "\n",
+    "if os.path.exists(file_path):\n",
+    "    file = open(file_path,'r')\n",
+    "    \n",
+    "raw = file.read()\n",
+    "raw = raw[:-1]\n",
+    "\n",
+    "#raw='abc\\n\\na\\nb\\nc\\n\\nab\\nac\\n\\na\\na\\na\\na\\n\\nb'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 289,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "groups = raw.split('\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "500"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(groups)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For part 1, the sum is : 6742\n"
+     ]
+    }
+   ],
+   "source": [
+    "summ = 0\n",
+    "for group in groups : \n",
+    "    group = re.sub('\\n','',group)\n",
+    "    group = [g for g in group]\n",
+    "    group = np.unique(group)\n",
+    "    \n",
+    "    summ += len(group)\n",
+    "print('For part 1, the sum is :',summ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For part 2, the sum is : 3447\n"
+     ]
+    }
+   ],
+   "source": [
+    "summ = 0\n",
+    "for group in groups : \n",
+    "    nb_in_gp = len(group.split('\\n'))\n",
+    "    group = re.sub('\\n','',group)\n",
+    "    group = [g for g in group]\n",
+    "    uniq, count = np.unique(group, return_counts = True)\n",
+    "    filtre = count==nb_in_gp\n",
+    "    summ += np.sum(filtre)\n",
+    "    #print(group, nb_in_gp, count,filtre,np.sum(filtre))\n",
+    "print('For part 2, the sum is :',summ)"
    ]
   },
   {
